crates/cli/src/commands/snapshots/mcpgw__commands__inspect__tests__renders_tools_and_the_missing_resources_capability.snap
---
source: crates/cli/src/commands/inspect.rs
expression: "render(\"fx\", &inspection(), false)"
---
fx — mcpgw-test-server 9.9.9

tools (2)
  echo     echoes input
  reverse

resources: not supported by this server
